Fixed issues with scrollbars in IE6...

--- a/style/jquery.jscrollpane.css
+++ b/style/jquery.jscrollpane.css
@@ -112,3 +112,9 @@
 	float: left;
 	height: 100%;
 }
+
+/* Yuk! CSS Hack for IE6 3 pixel bug :( */
+* html .jspCorner
+{
+	margin: 0 -3px 0 0;
+}
